--- a/chair.html
+++ b/chair.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
         <link rel="stylesheet" href="chair.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>CHAIR PAGE</title>
 	</head>
 	<body>
 		<div class="container">
