--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="f0">
                     <section class="c0">
                       <div>
-                        <img src="https://www.ulcdn.net/images/products/809366/original/Morgen_Wing_LP.png?1683923831" width="100%" height="150px" />
+                        <img src="https://ik.imagekit.io/2xkwa8s1i/img/npl_modified_images/atticus/sofa_WLCHRATCFVBL/sofa_WLCHRATCFVBL_1.jpg?tr=w-576" width="100%" height="150px" />
                         <h3>The laid back</h3>
                         <div class="f1">
                           <div class="svg">
